# ACG_grpwk

./: .buildpacks  .env  .eslintignore  .eslintrc.yaml  .gitignore  .prettierignore  .prettierrc  Procfile  README.md  alembic.ini  editor.tsconfig.json  generateUtilityFiles.ts  index.html  package-lock.json  package.json  pyproject.toml  responderd.py  run-backserver.sh  run.py  tsconfig.json  webpack.base.js  webpack.config.dev.js  webpack.config.js  webpack.config.noeditor.js  workspace.editorworkspace
.github/workflows/: discord_bot.yml  server.yml  webpack.yml
app/: battlecontrol.py  db_connector.py  manage.py  sqlalchemy_h.py  template.py  usercontrol.py
lint_test/: sample.ts
migration/: env.py
migration/versions/: 20211211-2027_initial.py  20211212-2353_change_column_names_to_camelcase.py  20211213-1448_create_battlelog_table.py
projects/ImageProcessing/: scene.editorproject
projects/MainMap/: scene.editorproject
projects/ScrapBox/: scene.editorproject
projects/scene/: scene.editorproject
projects/welcomescene/: scene.editorproject
protobuf/: .gitignore  __init__.py  backapi.proto  backapi_pb2.py  backapi_pb2.pyi  backapi_pb2.ts  compiled_pb2.d.ts  compiled_pb2.js  compiled_pb2.ts  index.ts  websocket.proto  websocket_pb2.py  websocket_pb2.pyi  websocket_pb2.ts
scenes/ImageProcessing/: scene.babylon
scenes/MainMap/: scene.babylon
scenes/scene/: scene.babylon
scenes/welcomescene/: scene.babylon
src/: generateUtilityFiles.ts  index.ts
src/generatedShaderCode/: getLightInfo.glsl  nodeMaterial.json  ssr.frag.glsl
tests/: test_backapi.py
(+677 files in other folders)
