[tool.poetry]
name = "acg_grpwk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrdict = "^2.0.1"
rich = "^10.15.2"
toml = "^0.10.2"
responder = "^2.0.7"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.28"
protobuf = "^3.19.1"
mypy-protobuf = "^3.0.0"
typesystem = "<0.3.0"
SQLAlchemy-Utils = "^0.37.9"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
